@@ -58,19 +58,19 @@ AC_PATH_PROG(GAWK, gawk, NONE)
 AC_PATH_PROG(NAWK, nawk, NONE)
 
 if test "x$AWK" != "xNONE" ; then
-	AWK="$AWK -f"
+	AWK="$AWK"
 fi
 
 if test "x$NAWK" != "xNONE" ; then
-	AWK="$NAWK -f"
+	AWK="$NAWK"
 fi
 
 if test "x$GAWK" != "xNONE" ; then
-	AWK="$GAWK -f"
+	AWK="$GAWK"
 fi
 
 if test "x$MAWK" != "xNONE" ; then
-	AWK="$MAWK -f"
+	AWK="$MAWK"
 fi
 		
 AC_SUBST(AWK)
