@@ -1,4 +1,4 @@
-#! @AWK@
+#! @AWK@ -f
 #
 # -*-awk-*-
 #
